# job-search-agent

./: .gitignore  CONTRIBUTING.md  README.md  filters.py  jobscout.py  output.py  pyproject.toml  scorer.py  setup.py
.github/workflows/: test.yml
branding/: BRAND_GUIDE.md  COLORS.md  DESIGN_BRIEF_FOR_A_REAL_DESIGNER.md  TYPOGRAPHY.md
connectors/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py
docs/: ADD_A_CONNECTOR.md  ARCHITECTURE.md  CUSTOMIZE_SCORING.md  DEMO_RECORDING.md  HOW_TO_REGENERATE_DEMO.md  LAUNCHAGENT_MACOS.md  SETUP_WIZARD.md  SYNC_TABLE.md  SYSTEMD_LINUX.md  VIDEO_PLAN.md  demo-script.md  narration-transcript.txt
examples/: README.md  companies.example.json  credentials.example.md  filters.example.yml
launch/: README.md  discord-announcement.md  email-to-tech-press.md  hacker-news.md  linkedin-post.md  reddit-r-cscareerquestions.md  reddit-r-machinelearning.md  x-thread.md
prompts/: pitch.md  scoring.md
render/: demo.html  render_demo.py
tests/: test_ashby.py  test_filters.py  test_greenhouse.py  test_lever.py
wizard/: index.html
